now use idb_shim from hosted pub.dartlang.com

--- a/mini-todo/pubspec.yaml
+++ b/mini-todo/pubspec.yaml
@@ -1,7 +1,7 @@
 name: mini_todo
-description: A sample todo application
+description: A sample todo application using idb_shim
 dependencies:
   browser: any
-  idb_shim:
-    git: https://github.com/alextekartik/idb_shim.dart
+  idb_shim: any
+#    git: https://github.com/alextekartik/idb_shim.dart
 #    path: ../../idb_shim.dart
