--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,8 @@ mini-todo/build/web/packages/$sdk
 # build files not needed
 *.dart.precompiled.js
 
+# markdown eclipse plugin
+.*.md.html
+
 # interop.js no longer needed
 mini-todo/build/web/packages/browser/interop.js
