--- a/mini-todo/pubspec.yaml
+++ b/mini-todo/pubspec.yaml
@@ -3,6 +3,9 @@ description: A sample todo application using idb_shim
 dependencies:
   browser: any
   idb_shim: any
+  dart_to_js_script_rewriter: ">=0.0.1+2 <0.1.0"
 #  idb_shim:
 #    git: https://github.com/alextekartik/idb_shim.dart
 #    path: ../../idb_shim.dart
+transformers:
+- dart_to_js_script_rewriter
