--- a/tutorial_todo/pubspec.yaml
+++ b/tutorial_todo/pubspec.yaml
@@ -1,11 +1,11 @@
 name: mini_todo
 description: A sample todo application using idb_shim
+environment:
+  sdk: '>=2.0.0-dev.63 <3.0.0'
 dependencies:
-  browser: any
   idb_shim: any
-  dart_to_js_script_rewriter: ">=0.0.1+2 <0.1.0"
-#  idb_shim:
-#    git: https://github.com/alextekartik/idb_shim.dart
-#    path: ../../idb_shim.dart
-transformers:
-- dart_to_js_script_rewriter
+
+dev_dependencies:
+  build_runner: '>=0.9.0'
+  build_test: '>=0.10.2'
+  build_web_compilers: '>=0.4.0'
