--- a/tutorial_todo/pubspec.yaml
+++ b/tutorial_todo/pubspec.yaml
@@ -1,11 +1,13 @@
 name: mini_todo
 description: A sample todo application using idb_shim
 environment:
-  sdk: '>=2.0.0-dev.63 <3.0.0'
+  sdk: '>=2.7.0 <3.0.0'
 dependencies:
   idb_shim: any
 
 dev_dependencies:
+  process_run:
   build_runner: '>=0.9.0'
   build_test: '>=0.10.2'
   build_web_compilers: '>=0.4.0'
+  pedantic: '>=1.9.0'
