--- a/tutorial_todo/pubspec.yaml
+++ b/tutorial_todo/pubspec.yaml
@@ -1,7 +1,7 @@
 name: mini_todo
 description: A sample todo application using idb_shim
 environment:
-  sdk: '>=3.4.0 <4.0.0'
+  sdk: ^3.5.0
 dependencies:
   idb_shim: any
   web:
