--- a/tutorial_todo/pubspec.yaml
+++ b/tutorial_todo/pubspec.yaml
@@ -3,7 +3,7 @@ description: A sample todo application using idb_shim
 environment:
   sdk: ^3.5.0
 dependencies:
-  idb_shim: any
+  idb_shim: '>=2.6.1+6'
   web:
 
 dev_dependencies:
