--- a/tutorial_todo/pubspec.yaml
+++ b/tutorial_todo/pubspec.yaml
@@ -7,7 +7,7 @@ dependencies:
   web:
 
 dev_dependencies:
-  lints:
+  lints: '>=2.0.0'
   process_run:
   build_runner: '>=0.9.0'
   build_test: '>=0.10.2'
